fixed clipping

--- a/style.scss
+++ b/style.scss
@@ -271,7 +271,6 @@ button:active{
     padding: 50px;
     border-radius: $border-radius;
     gap: 4rem;
-    height: 600px;
     h1{
         font-size: 4rem;
         text-align: center;
@@ -293,6 +292,7 @@ button:active{
     padding: 15px;
     width: 30%;
     justify-content: space-between;
+    position: relative;
     h1{
         font-size:3rem;
     }
